PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/HolidayWorkDetail__c.object-meta.xml
<CustomObject>
    <label>휴일근무 상세</label>
    <nameField>
        <displayFormat>HW-{YY}{MM}-{0000}</displayFormat>
        <label>휴일근무 상세 코드</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>