PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>종료시간</label>
    <type>DateTime</type>
</CustomField>