PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/fields/fm_KeyValue__c.field-meta.xml
<CustomField>
    <fullName>fm_KeyValue__c</fullName>
    <description>중복값 체크를 위한 필드 (같은일자 중복 근무자 방지)</description>
    <formula>TEXT(HolidayWork__r.WorkingTime__c) + CASESAFEID(WorkUser__c)</formula>
    <label>KeyValue</label>
    <type>Text</type>
</CustomField>