PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/fields/fm_Minutes__c.field-meta.xml
<CustomField>
    <fullName>fm_Minutes__c</fullName>
    <description>2023.1까지 사용하던 필드</description>
    <formula>(EndTime__c-StartTime__c)*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>2023.1까지 사용하던 필드</inlineHelpText>
    <label>근무시간(분) (사용X)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>