PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/fields/fm_PlanningHours__c.field-meta.xml
<CustomField>
    <fullName>fm_PlanningHours__c</fullName>
    <formula>CASE(PlanningTime__c, &quot;4&quot;, 4, &quot;8&quot;, 8, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>계획시간(계산)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>