PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/fields/fm_RewardDays__c.field-meta.xml
<CustomField>
    <fullName>fm_RewardDays__c</fullName>
    <formula>CASE(WorkingTime__c, &quot;4&quot;, 0.75, &quot;8&quot;, 1.5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>대체휴가일수</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>