PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/fields/fm_TotalTime__c.field-meta.xml
<CustomField>
    <fullName>fm_TotalTime__c</fullName>
    <description>2023.1까지 사용하던 필드</description>
    <formula>LPAD( TEXT( FLOOR( (EndTime__c-StartTime__c)*24 ) ), 2, &quot;0&quot; ) &amp;&quot;:&quot; &amp; LPAD( TEXT( MOD( (EndTime__c- StartTime__c)*1440 ,60 ) ), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>2023.1까지 사용하던 필드</inlineHelpText>
    <label>근무시간(계산) (사용X)</label>
    <type>Text</type>
</CustomField>