PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/fields/fm_WorkingDate__c.field-meta.xml
<CustomField>
    <fullName>fm_WorkingDate__c</fullName>
    <formula>LEFT( Text( StartTime__c ), 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>근무일자</label>
    <type>Text</type>
</CustomField>