PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/fields/HolidayWork__c.field-meta.xml
<CustomField>
    <fullName>HolidayWork__c</fullName>
    <label>휴일근무</label>
    <referenceTo>HolidayWork__c</referenceTo>
    <relationshipName>HWD_HolidayWork</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>