PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/fields/image__c.field-meta.xml
<CustomField>
    <fullName>image__c</fullName>
    <inlineHelpText>사전승인 받은 메일 캡쳐하여 첨부</inlineHelpText>
    <label>첨부이미지</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>