PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>시작시간</label>
    <type>DateTime</type>
</CustomField>