PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/fields/WorkDetail__c.field-meta.xml
<CustomField>
    <fullName>WorkDetail__c</fullName>
    <label>작업내용</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>