PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/fields/WorkingTime__c.field-meta.xml
<CustomField>
    <fullName>WorkingTime__c</fullName>
    <label>근무시간</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <label>0.5일 (4시간)</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>1일 (8시간)</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>근무하지 않음</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>