PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/fields/WorkOrderUser__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>작업지시자</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HolidayWorkDetailUser</relationshipName>
    <type>Lookup</type>
</CustomField>