PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/fields/WorkUser__c.field-meta.xml
<CustomField>
    <fullName>WorkUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>휴일근무자</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HolidayWorkUserDetail</relationshipName>
    <type>Lookup</type>
</CustomField>