PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/validationRules/DoNotChange_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotChange_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(HolidayWork__r.Status__c, &apos;계획작성중&apos;)),
				OR(ISCHANGED(PlanningTime__c), 
       ISCHANGED(WorkUser__c), 
       ISCHANGED(Stage__c)
						)
   )</errorConditionFormula>
    <errorMessage>계획승인 이후에는 휴일근무자, 단계, 계획시간을 변경할 수 없습니다.</errorMessage>
</ValidationRule>