PA_Education/TestMenifest/force-app/main/default/objects/HolidayWorkDetail__c/validationRules/DoNotFill_WorkingTime.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotFill_WorkingTime</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( ISPICKVAL(HolidayWork__r.Status__c, &apos;계획작성중&apos;) ,
        ISPICKVAL(HolidayWork__r.Status__c, &apos;계획승인요청&apos;)) ,
    NOT( ISPICKVAL( WorkingTime__c,  &apos;&apos;))
        )</errorConditionFormula>
    <errorDisplayField>WorkingTime__c</errorDisplayField>
    <errorMessage>계획승인이 완료된 후에 근무시간을 작성할 수 있습니다.</errorMessage>
</ValidationRule>